# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.82 2008-02-20 10:46:23 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --
2.2.6 (2008/??/??)
 - (2008/02/20) Fixed bug# 2644 - Insert a test function to find easier wrong
    configured GD-CPAN modules.
 - (2008/02/20) Fixed bug# 2706 - SysConfig setting LogSystemCacheSize causes
    error messages.
 - (2008/02/19) Fixed bug# 2450 - Auto-conversion of URLs to links fail when
    a ')' is encountered.
 - (2008/02/18) Fixed bug# 2674 - spellchecker always reports 0 errors
 - (2008/02/18) Fixed bug# 2541 - Missing "Ticket unlock" link for ticket the
    actions 'Phone call', 'Merge', 'Move' and 'Forward'.
 - (2008/02/18) Fixed bug# 2145 - $Config{"TicketFreeTimeKey22"} instant of
    $Config{"TicketFreeTimeKey2"} in AgentTicketSearchResultShort.dtl.
 - (2008/02/18) Fixed bug# 2674 - Spellchecker always reports 0 errors
    even SpellCheckerBin is not configured correctly.
 - (2008/02/17) Improved bin/otrs.checkModules tool for checking required
    CPAN modules.
 - (2008/02/17) Fixed bug# 2255 - SysConfig setting Ticket ->
    Frontend::Customer::Ticket::ViewZoom ->
    Ticket::Frontend::CustomerTicketZoom###State has no effect (only
    closed is shown any time).
 - (2008/02/15) Fixed non fixed font and wrong new line breaking problem on
    safari in textarea input fields (updated Kernel/Output/HTML/Standard/css.dtl
    and Kernel/Output/HTML/Standard/customer-css.dtl).
 - (2008/02/15) Fixed bug# 2694 - URL-to-long-error in
    AdminCustomerUserService mask on changing settings.
 - (2008/02/14) Fixed bug# 2239 - CustomerCompanySupport is broken when
    using external backend DB.
 - (2008/02/12) Fixed bug# 2533 - Wide character error when searching for a